* Fri Jun 04 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.7.0
- Removed
  - Drop support for Puppet 5
- Changed
  - Minor README updates
    - Clarify versions of GitLab this modules is known to work with and
      the steps a user can do to verify it works with a different version.
    - Update GitLab ticket URLs.
  - Allow herculesteam/augeasproviders_ssh < 5.0.0
  - Allow puppet/gitlab < 8.0.0
  - Allow puppetlabs/stdlib < 8.0.0
  - Use puppet/chrony in lieu of aboe/chrony, as VoxPupuli has now assumed
    ownership of this module.

* Thu Jan 07 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.6.1
- Fixed a bug in which the change_gitlab_root_password script did
  not work for GitLab versions that included Ruby 2.7.x (GitLab 13.6.0
  and later).
- Fixed a bug in which the change_gitlab_root_password script emitted
  a 'WARNING: GitLab is not completely running' error message when
  GitLab was fully running.

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.6.1
- Maintenance update for module assets

* Thu Oct 29 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 0.6.0-0
- Updates for GitLab application (12.3.0-13.x) and puppet/gitlab module 6.0.1
  - Removed:
    - Support for GitLab < 12.3.0.
    - TLSv1.1 from the default for `simp_gitlab::ssl_protocols`.
  - Changed:
    - Set the GitLab root password in a fashion that minimizes coupling of
      `simp_gitlab` with the internals of the `gitlab` module.
      - Set a throw-away password during initial GitLab package installation
        using GitLab configuration in /etc/gitlab/gitlab.rb. Setting the
        password during initial install is the **only** way to ensure the
        password is not set by an external user. Otherwise, the first GitLab
        page that comes up is the page to reset the root password.
      - After GitLab initial configuration, set the real root password using
        a script that implements Gitlab-provided procedures for setting the
        password.