@@ -1,9 +1,7 @@
 ---
 fixtures:
   repositories:
-    augeas_core:
-      repo: https://github.com/simp/pupmod-puppetlabs-augeas_core.git
-      puppet_version: ">= 6.0.0"
+    augeas_core: https://github.com/simp/pupmod-puppetlabs-augeas_core.git
     augeasproviders_core: https://github.com/simp/augeasproviders_core.git
     augeasproviders_ssh: https://github.com/simp/augeasproviders_ssh.git
     chrony: https://github.com/simp/pupmod-voxpupuli-chrony.git
@@ -20,11 +18,7 @@ fixtures:
     simp_firewalld: https://github.com/simp/pupmod-simp-simp_firewalld.git
     stdlib: https://github.com/simp/puppetlabs-stdlib.git
     svckill: https://github.com/simp/pupmod-simp-svckill.git
-    yumrepo_core:
-      repo: https://github.com/simp/pupmod-puppetlabs-yumrepo_core.git
-      puppet_version: ">= 6.0.0"
-
-    # Fixtures required for the acceptance tests
+    yumrepo_core: https://github.com/simp/pupmod-puppetlabs-yumrepo_core.git
     simp_openldap: https://github.com/simp/pupmod-simp-simp_openldap.git
   symlinks:
     simp_gitlab: "#{source_dir}"
